--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -19,6 +19,7 @@ jobs:
   deploy:
     name: Deploy
     runs-on: ubuntu-latest
+    using: 'node16'
     steps:
       - name: Checkout
         uses: actions/checkout@v3
