--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -19,7 +19,9 @@ jobs:
   deploy:
     name: Deploy
     runs-on: ubuntu-latest
-    using: 'node16'
+    strategy:
+      matrix: 
+        node-version: [15.x, 16.x]
     steps:
       - name: Checkout
         uses: actions/checkout@v3
