--- a/.github/workflows/gityhub-action.yml
+++ b/.github/workflows/gityhub-action.yml
@@ -1,18 +1,15 @@
-name: Deployment to ECS
-run-name: ${{github.actor}} is learning Github Actions
+name: Node.js CI
+
 on: [push]
-jobs: 
+
+jobs:
   build:
+
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        node-version: [16.x]
+
     steps:
-       - uses: actions/checkout@v3
-       - name: Use Node.js ${{matrix.node-version}}
-         uses: actions/setup-node@v3
-         with:
-            node-version: ${{matrix.node-version}}
-       - run: npm start
-    
-   
+      - uses: actions/checkout@v3
+      - name: Use Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '12.x'
