--- a/.github/workflows/gityhub-action.yml
+++ b/.github/workflows/gityhub-action.yml
@@ -24,11 +24,11 @@ jobs:
         id: login-ecr
         uses: aws-actions/amazon-ecr-login@v1
       
-      - name: Docker build tag and push image to ECR
+      - name: Docker, build ,tag and push image to ECR
         env:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
           ECR_REPOSITORY: docker_nodejs_demo
-          IMAGE_TAG: nodejs_demo_image
+          IMAGE_TAG: ${{ github.sha }}
         run: |
           docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
           docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
